--- a/marketplace.css
+++ b/marketplace.css
@@ -63,7 +63,73 @@ nav a:hover {
   color: #43e96d;
 }
 
-/* Estilo da tela de carregamento */
+.container-search {
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.search-box {
+  display: inline-block;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+input[type="text"] {
+  padding: 5px;
+  border: none;
+  border-radius: 3px;
+}
+
+button[type="submit"] {
+    padding: 5px 10px;
+    background-color: #43e96d; 
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.category-box {
+  background-color: #f0f0f0;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  padding: 10px;
+  width: 200px;
+  text-align: center;
+  margin-left: 15px;
+  margin-bottom: 20px;
+}
+
+
+.category-box h2 {
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+
+.category-box ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.category-box li {
+  margin-bottom: 5px;
+}
+
+.category-box a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+.category-box a:hover {
+  color: #43e96d;
+}
+
+
 @keyframes pulsate {
   0% {
     transform: scale(0.8);
@@ -76,7 +142,6 @@ nav a:hover {
   }
 }
 
-/* Ajustes para a tela de carregamento */
 #loader {
   position: fixed;
   top: 50%;
@@ -84,15 +149,15 @@ nav a:hover {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0ff; /* Cor de fundo para a tela de carregamento */
+  background-color: #f0f0f0ff; 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .loader-content img {
-  max-width: 100px; /* Ajuste o tamanho da imagem conforme necessário */
-  animation: pulsate 1.5s infinite; /* Aplica a animação "pulsate" infinitamente */
+  max-width: 100px; 
+  animation: pulsate 1.5s infinite; 
 }
 
 
