--- a/teste.css
+++ b/teste.css
@@ -7700,12 +7700,23 @@
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    color: #fbceb5; }
+    transform: scale(0.95);
+    color: #fff; }
     a:hover, a:focus {
       text-decoration: none !important;
       outline: none !important;
       -webkit-box-shadow: none;
       box-shadow: none; }
+
+      a:active {
+        transform: scale(0.95);
+      }
+
+      .btn2{
+        color: #0062cc
+      }
+
+      
   
   h1, h2, h3, h4, h5,
   .h1, .h2, .h3, .h4, .h5 {
