--- a/adicionar.css
+++ b/adicionar.css
@@ -1,134 +1,68 @@
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
-    margin: 0;
-  }
-  
-  .contatos {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    background-color: #43e96d;
-  }
-  
-  .contatos1 {
-    width: 100%;
-    max-width: 900px;
-    height: auto;
-    overflow: hidden;
-    margin: auto;
-  }
-  
-  .cont {
-    width: 33.3%;
-    height: 40px;
-    float: left;
-  }
-  
-  .cont p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 8px;
-    color: black;
-    text-align: center;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .cont {
-        width: 100%;
-    }
-  
-    .cont p {
-        text-align: center;
-    }
-  }
-  
-  .vermelho {
-    display: flex;
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    background-color: #1d1c28;
-  }
-  
-  .amarelo {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    overflow: hidden;
-    background-color: #1d1c28;
-  }
-  
-  .amarelo img {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .azul {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #1d1c28;
-  }
-  
-  .verde {
-    width: 30%;
-    height: 70px;
-    background-color: #1d1c28;
-  }
-  
-  .verde p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 15px;
-    color: #43e96d;
-    text-align: center;
-    letter-spacing: 3px;
-    text-shadow: 5px 5px 5px #000000;
-  }
-  
-  a:link {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-    text-decoration-color: #43e96d;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .azul {
-        max-width: 100%;
-    }
-  
-    .verde {
-        width: 100%;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .amarelo {
-        max-width: 100%;
-    }
-  
-    .amarelo img {
-        align-items: center;
-    }
-  
-    .verde p {
-        text-align: center;
-    }
-  }
+  font-family: Arial, sans-serif;
+  background-color: white;
+  color: #333;
+}
+
+header {
+  background-color: #1d1c28;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px; 
+}
+.logo img {
+  max-width: 50%; 
+  height: auto;
+}
 
 
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-left: 15px; 
+}
+
+nav a {
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.2em;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: inline-flex;
+}
+
+nav a i {
+  margin-right: 5px;
+  margin-left: 5px;
+  transition: transform 0.3s ease;
+}
+
+nav a:hover i {
+  transform: translateX(-5px);
+  color: #43e96d;
+}
 
 
-  
-  h1 {
-    text-align: center;
-    margin-top: 150px;
-  }
+nav a:hover {
+  background-color: #2c2b3a; 
+  color: #43e96d;
+}
+
   
   form {
     max-width: 400px;
@@ -156,31 +90,71 @@ body {
     margin-bottom: 77px;
   }
 
-
-
-
-.batata {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #1d1c28;
-    margin-top: 10%;
-  }
-  
-  .batatinha {
-    width: 50%;
-    height: 58px;
-    background-color: #1d1c28;
-  }
-  
-  .batatinha p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 15px;
-    color: #43e96d;
+  h1 {
     text-align: center;
-    letter-spacing: 3px;
-    text-shadow: 5px 5px 5px #000000;
+    margin-top: 80px;
+  }
+  
+ 
+
+  #caixaTexto {
+    border: 1px solid grey;
+    min-height: 30px;
+    width: 410px;
+    padding: 5px;
+    overflow: hidden;
+
+  }
+
+  
+
+  @keyframes pulsate {
+    0% {
+      transform: scale(0.8);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(0.8);
+    }
+  }
+  
+  #loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #f0f0f0ff; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .loader-content img {
+    max-width: 100px; 
+    animation: pulsate 1.5s infinite; 
+  }
+  
+  
+  footer {
+    background-color: #1d1c28;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .footer-links a {
+    margin-right: 15px; 
+    text-decoration: none;
+    color: #43e96d;
+  }
+  .footer p {
+    font-size: 1.2em;
+    margin-top: 10px;
+  }
+  .footer-links a:last-child {
+    margin-right: 0;
   }
