--- a/marketplace.css
+++ b/marketplace.css
@@ -77,6 +77,14 @@ nav a:hover {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
+.adicionar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -500px;
+  margin-top: -64px;
+}
+
 input[type="text"] {
   padding: 5px;
   border: none;
