--- a/produto.css
+++ b/produto.css
@@ -1,126 +1,68 @@
-body {
-    margin: 0;
-  }
-  
-  .contatos {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    background-color: #43e96d;
-  }
-  
-  .contatos1 {
-    width: 100%;
-    max-width: 900px;
-    height: auto;
-    overflow: hidden;
-    margin: auto;
-  }
-  
-  .cont {
-    width: 33.3%;
-    height: 40px;
-    float: left;
-  }
-  
-  .cont p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 8px;
-    color: black;
-    text-align: center;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .cont {
-        width: 100%;
-    }
-  
-    .cont p {
-        text-align: center;
-    }
-  }
-  
-  .vermelho {
-    display: flex;
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    background-color: #1d1c28;
-  }
-  
-  .amarelo {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    overflow: hidden;
-    background-color: #1d1c28;
-  }
-  
-  .amarelo img {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .azul {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #1d1c28;
-  }
-  
-  .verde {
-    width: 30%;
-    height: 70px;
-    background-color: #1d1c28;
-  }
-  
-  .verde p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 15px;
-    color: #43e96d;
-    text-align: center;
-    letter-spacing: 3px;
-    text-shadow: 5px 5px 5px #000000;
-  }
-  
-  a:link {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-    text-decoration-color: #43e96d;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .azul {
-        max-width: 100%;
-    }
-  
-    .verde {
-        width: 100%;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .amarelo {
-        max-width: 100%;
-    }
-  
-    .amarelo img {
-        align-items: center;
-    }
-  
-    .verde p {
-        text-align: center;
-    }
-  }
+body, html {
+  margin: 0;
+  padding: 0;
+}
 
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: white;
+  color: #333;
+}
+
+header {
+  background-color: #1d1c28;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px; 
+}
+.logo img {
+  max-width: 50%; 
+  height: auto;
+}
+
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-left: 15px; 
+}
+
+nav a {
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.2em;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: inline-flex;
+}
+
+nav a i {
+  margin-right: 5px;
+  margin-left: 5px;
+  transition: transform 0.3s ease;
+}
+
+nav a:hover i {
+  transform: translateX(-5px);
+  color: #43e96d;
+}
+
+
+nav a:hover {
+  background-color: #2c2b3a; 
+  color: #43e96d;
+}
+ 
   h1 {
     text-align: center;
     color: #333;
@@ -142,7 +84,7 @@ body {
     height: auto;
     margin-bottom: 20px;
     height: 300px;
-    margin-left: 120px;
+    margin-left: 150px;
   }
   
   .product-details h2 {
@@ -165,31 +107,58 @@ body {
     font-size: 16px;
   }
 
-.batata {
+  @keyframes pulsate {
+    0% {
+      transform: scale(0.8);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(0.8);
+    }
+  }
+  
+  #loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
-    height: auto;
-    overflow: hidden;
+    height: 100%;
+    background-color: #f0f0f0ff; 
     display: flex;
-    flex-wrap: wrap;
-    background-color: #1d1c28;
-    margin-top: 10%;
+    justify-content: center;
+    align-items: center;
   }
   
-  .batatinha {
-    width: 50%;
-    height: 58px;
-    background-color: #1d1c28;
+  .loader-content img {
+    max-width: 100px; 
+    animation: pulsate 1.5s infinite; 
   }
   
-  .batatinha p {
-    font-family: 'gothan';
-    font-size: 14pt;
-    margin-top: 15px;
-    color: #43e96d;
+  
+  footer {
+    background-color: #1d1c28;
+    color: #fff;
+    padding: 20px;
     text-align: center;
-    letter-spacing: 3px;
-    text-shadow: 5px 5px 5px #000000;
+    margin-top: 60px;
   }
+  
+  .footer-links a {
+    margin-right: 15px; 
+    text-decoration: none;
+    color: #43e96d;
+  }
+  .footer p {
+    font-size: 1.2em;
+    margin-top: 10px;
+  }
+  .footer-links a:last-child {
+    margin-right: 0;
+  }
+  
 
 .vendedor button{
     margin-top: 20px;
@@ -198,17 +167,11 @@ body {
     color: white;
     border: none;
     cursor: pointer;
-    margin-left: 840px;
+    margin-left: 600px;
   }
 
   @media only screen and (max-width: 600px){
     .product-details img{
         margin-left: 60px;
-    }
-  }
-
-  @media only screen and (max-width: 600px){
-    .vendedor button{
-        margin-left: 20px;
     }
   }
