--- a/marketplace.css
+++ b/marketplace.css
@@ -70,20 +70,37 @@ nav a:hover {
   margin-bottom: 5px;
 }
 
-.search-box {
-  display: inline-block;
-  background-color: #ffffff;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-}
 
 .adicionar {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -350px;
-  margin-top: 30px;
+  margin-left: 150px;
+  margin-top: 7px;
+}
+
+.favoritos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 150px;
+  margin-top: 7px;
+}
+
+.chat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 250px;
+  margin-top: 7px;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 400px;
+  margin-top: 7px;
 }
 
 input[type="text"] {
@@ -100,193 +117,6 @@ button[type="submit"] {
     border-radius: 3px;
     cursor: pointer;
 }
-
-.category-box {
-  background-color: #f0f0f0;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 5px;
-  padding: 10px;
-  width: 200px;
-  text-align: center;
-  margin-left: 15px;
-  margin-bottom: 20px;
-}
-
-
-.category-box h2 {
-  font-size: 20px;
-  margin: 0 0 10px;
-}
-
-.category-box ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.category-box li {
-  margin-bottom: 5px;
-}
-
-.category-box a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
-
-.category-box a:hover {
-  color: #43e96d;
-}
-
-.product-box1 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 300px;
-  margin-top: -280px;
-}
-
-.product-box2 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 300px;
-  margin-top: -500px;
-}
-
-.product-box3 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 530px;
-  margin-top: -30 0px;
-}
-
-.product-box4 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 530px;
-  margin-top: -500px;
-}
-
-.product-box5 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 2px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 760px;
-  margin-right: -60px;
-}
-
-.product-box6 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 760px;
-  margin-top: -490px;
-}
-
-.product-box7 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 2px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 995px;
-  margin-right: -120px;
-  margin-bottom: -500px;
-}
-
-.product-box8 {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 200px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  margin-left: 995px;
-  margin-right: -60px;
-}
-
-.product-box img {
-  max-width: 100%;
-}
-
-.product-box h3 {
-  font-size: 18px;
-  margin: 10px 0;
-}
-
-.product-price {
-  color: #43e96d;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.product-box p {
-  font-size: 14px;
-  margin: 10px 0;
-}
-
-.my-button {
-  background-color: #43e96d;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-left: 600px;
-  margin-top: 260px;
-}
-
-  .my-button :before {
-    content: "\f078";
-    font-family: "Font Awesome 5 Free";
-    font-size: 16px;
-    margin-right: 5px;
-  
-
-
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
 
 
 
@@ -341,5 +171,4 @@ footer {
 .footer-links a:last-child {
   margin-right: 0;
 }
-
 
