--- a/marketplace.css
+++ b/marketplace.css
@@ -172,15 +172,98 @@ footer {
   margin-right: 0;
 }
 
-.propaganda {
-  margin-top: 30px;
-  margin-left: 300px;
+
+
+
+
+
+
+.slider {
+  margin: 0 auto;
+  width: 225px;
+  height: 200px;
+  overflow: hidden;
 }
 
-.propaganda img {
-  width: 1250px;
-  height: 300px;
+.slides {
+  width: 400%;
+  height: 200px;
+  display: flex;
 }
+.slides input {
+  display: none;
+}
+.slide{
+  width: 25%;
+  position: relative;
+  transition: 2s;
+}
+.slide img{
+  width: 230px;
+}
+.manual-navigation{
+  position: absolute;
+  width: 230px;
+  display: flex;
+  justify-content: center;
+}
+.manual-btn{
+  border: 2px solid black;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: .5s;
+}
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+.manual-btn:hover{
+  background-color: black;
+}
+#radio1:checked ~ .primeiro{
+  margin-left: 0;
+}
+#radio2:checked ~ .primeiro{
+  margin-left: -25%;
+}
+#radio3:checked ~ .primeiro{
+  margin-left: -50%;
+}
+#radio4:checked ~ .primeiro{
+  margin-left: -75%;
+}
+.navigation-auto div{
+  border: 2px solid blue;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+.navigation-auto{
+  position: absolute;
+  width: 230px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+}
+.navigation-auto div:not(:last-child){
+  margin-right: 40px;
+}
+#radio1:checked ~ .navigation-auto .auto-btn1{
+  background-color: black;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2{
+  background-color: black;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3{
+  background-color: black;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4{
+  background-color: black;
+}
+
+
+
 
 .categorias {
   margin-left: 500px;
