--- a/adicionar.css
+++ b/adicionar.css
@@ -14,25 +14,43 @@ header {
   background-color: #1d1c28;
   color: #fff;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 10px 20px; 
 }
-.logo img {
-  max-width: 50%; 
+
+header button:hover{
+  background-color: black;
+  color: #43e96d;
+}
+
+.voltar-botao i {
+  float: left;
+  margin-left: -5px;
+}
+
+button[type="submit"] {
+  padding: 5px 10px;
+  background-color: #43e96d; 
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  margin-left: 1100px;
+  cursor: pointer;
+  width: 80px;
+}
+
+h1{
+  font-size: 30px;
+}
+
+.logo img { 
   height: auto;
 }
 
-
 nav ul {
   list-style: none;
-  margin: 0;
+  margin-top: -50px;
   padding: 0;
-  display: flex;
-}
-
-nav li {
-  margin-left: 15px; 
 }
 
 nav a {
@@ -40,23 +58,19 @@ nav a {
   font-weight: bold;
   font-size: 1.2em;
   text-decoration: none;
-  padding: 10px 15px;
   border-radius: 5px;
-  transition: background-color 0.3s ease;
-  display: inline-flex;
+  transition: background-color 0.3s ease; 
 }
 
-nav a i {
+nav h1 i {
   margin-right: 5px;
-  margin-left: 5px;
-  transition: transform 0.3s ease;
+  margin-left: 10px;
 }
 
-nav a:hover i {
-  transform: translateX(-5px);
-  color: #43e96d;
+nav ul h1 i {
+  float: right;
+  margin-left: 10px;
 }
-
 
 nav a:hover {
   background-color: #2c2b3a; 
@@ -83,11 +97,16 @@ nav a:hover {
   input[type="submit"] {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #46e96d;
     color: white;
     border: none;
     cursor: pointer;
     margin-bottom: 77px;
+  }
+
+  input[type="submit"]:hover{
+    background-color: black;
+    color: #43e96d;
   }
 
   h1 {
@@ -134,7 +153,7 @@ nav a:hover {
   }
   
   .loader-content img {
-    max-width: 100px; 
+    max-width: 150px; 
     animation: pulsate 1.5s infinite; 
   }
   
@@ -158,3 +177,4 @@ nav a:hover {
   .footer-links a:last-child {
     margin-right: 0;
   }
+  
