--- a/refugepi.css
+++ b/refugepi.css
@@ -1,9 +1,7 @@
-
 body, html {
   margin: 0;
   padding: 0;
 }
-
 
 body {
   font-family: Arial, sans-serif;
@@ -19,11 +17,11 @@ header {
   align-items: center;
   padding: 10px 20px; 
 }
+
 .logo img {
   max-width: 50%; 
   height: auto;
 }
-
 
 nav ul {
   list-style: none;
@@ -58,7 +56,6 @@ nav a:hover i {
   color: #43e96d;
 }
 
-
 nav a:hover {
   background-color: #2c2b3a; 
   color: #43e96d;
@@ -71,7 +68,6 @@ nav a:hover {
   padding: 50px; 
   flex-direction: row-reverse;
 }
-
 
 .intro-content {
   max-width: 60%;
@@ -95,59 +91,6 @@ nav a:hover {
   float: left;
 }
 
-.about {
-  background-color: #f0f0f0;
-  padding: 50px;
-}
-
-.about-content {
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.about h2 {
-  font-size: 2.5em;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
-.about p {
-  font-size: 1.2em;
-  line-height: 1.6em;
-  margin-bottom: 20px;
-}
-
-.about a {
-  background-color: #43e96d;
-  color: #fff;
-  text-decoration: none;
-  padding: 15px 30px;
-  border-radius: 5px;
-  font-weight: bold;
-  display: inline-block;
-  margin-top: 20px;
-  transition: background-color 0.3s ease-in-out;
-}
-
-
-.about a:hover {
-  background-color: #34a959;
-}
-.saiba-mais-button {
-  background-color: #43e96d;
-  color: #fff;
-  text-decoration: none;
-  padding: 15px 30px;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: background-color 0.3s ease-in-out;
-  display: inline-block;
-}
-
-.saiba-mais-button:hover {
-  background-color: #34a959;
-}
 /* Estilo da tela de carregamento */
 @keyframes pulsate {
   0% {
@@ -169,17 +112,16 @@ nav a:hover {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0ff; /* Cor de fundo para a tela de carregamento */
+  background-color: #f0f0f0ff; 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .loader-content img {
-  max-width: 100px; /* Ajuste o tamanho da imagem conforme necessário */
-  animation: pulsate 1.5s infinite; /* Aplica a animação "pulsate" infinitamente */
+  max-width: 100px; 
+  animation: pulsate 1.5s infinite; 
 }
-
 
 footer {
   background-color: #1d1c28;
@@ -193,10 +135,70 @@ footer {
   text-decoration: none;
   color: #43e96d;
 }
+
 .footer p {
   font-size: 1.2em;
   margin-top: 10px;
 }
+
 .footer-links a:last-child {
   margin-right: 0;
+}
+
+.donation {
+    background-color: #43e96d;
+    padding: 80px;
+    text-align: center;
+}
+
+.donation-content {
+    max-width: 800px;
+    margin: 0 auto;
+    color: #fff;
+}
+
+.donation h2 {
+    font-size: 3em;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.donation p {
+    font-size: 1.5em;
+    line-height: 1.8em;
+    margin-bottom: 30px;
+}
+
+.donation a {
+    background-color: #fff;
+    color: #43e96d;
+    text-decoration: none;
+    padding: 20px 40px;
+    border-radius: 8px;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 30px;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.donation a:hover {
+    background-color: #34a959;
+    color: #fff;
+    transform: scale(1.05);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.donation a:hover {
+    animation: pulse 1s infinite;
 }
