--- a/carrinho.css
+++ b/carrinho.css
@@ -247,3 +247,34 @@ aside > button:hover {
   background: #3bc55b;
 }
 /*# sourceMappingURL=styles.css.map */
+
+
+@keyframes pulsate {
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
+}
+
+#loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0ff; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader-content img {
+  max-width: 150px; 
+  animation: pulsate 1.5s infinite; 
+}
