--- a/marketplace.css
+++ b/marketplace.css
@@ -606,3 +606,77 @@ nav a:hover {
   padding: 20px; /* Espaçamento interno da caixa */
   border: 1px solid #ccc; /* Adiciona uma borda ao redor dos cards */
 }
+
+
+footer {
+  background-color: #1d1c28;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer-links a {
+  margin-right: 15px; 
+  text-decoration: none;
+  color: #43e96d;
+}
+
+.footer p {
+  font-size: 1.2em;
+  margin-top: 10px;
+}
+
+.footer-links a:last-child {
+  margin-right: 0;
+}
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 16px;
+  position: relative;
+  overflow: hidden;
+  transition: color 0.3s ease-in-out;
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
+.footer-links a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #43e96d;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.footer-links a:hover {
+  color: #43e96d;
+}
+
+.footer-links a:hover:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.footer-links a:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #43e96d;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.footer-links a:hover:after {
+  visibility: visible;
+  transform: scaleX(1);
+}
